# python-dash-app

./: .env.example  .gitignore  .pylintrc  Dockerfile  Dockerfile.dev  README.md  azure-pipelines.yaml  helper.sh  pyproject.toml
config/: config.yaml.example
infra/: acr.tf  aks.tf
k8s/: configmap.yaml  crd-instance.yaml  crd.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  job.yaml  pvc.yaml  secret.yaml  service.yaml
scripts/: build.sh  mypy.sh  pylint.sh  pytest.sh  run.sh
src/: __init__.py  config.py  job.py  main.py
src/app/: __init__.py  app_base.py  config.py
src/app/callbacks/: __init__.py  file_list.py  image_grid.py
src/app/callbacks/file_list/: __init__.py  file_list.py
src/app/callbacks/mock_list/: __init__.py  mock_list.py
src/app/layouts/: file_list.py  file_list_item.py  image_grid.py  not_implemented.py
src/app/layouts/file_list/: file_list.py  file_list_item.py
src/app/layouts/mock_list/: mock_list.py  mock_list_item.py
src/constants/: storage.py
src/storage/: __init__.py  local_screenshots.py
test/: test_env_vars.py
