[tool.poetry]
name = "python-dash-app"
version = "0.1.0"
description = "Simple Python Dash App"
authors = ["Alexandru Niculae <alexandru.niculae13@yahoo.com>"]
readme = "README.md"
packages = [{include = "python_dash_app"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.17.1"
dash-mantine-components = "^0.14.3"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^3.2.6"
mypy = "^1.11.0"
types-pyyaml = "^6.0.12.20240808"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
